--- a/projeto_04_danki/index.html
+++ b/projeto_04_danki/index.html
@@ -246,7 +246,7 @@
 
     <section class="contato">
         <h2>Contato</h2>
-        <form action="post">
+        <form action="http://127.0.0.1:5500/projeto_04_danki/index.html" method="get">
             <div class="form-wraper w100">
                 <span>Nome:</span>
                 <input type="text" name="nome" required>
@@ -267,7 +267,7 @@
             </div>
 
             <div class="form-wraper w100" style="text-align: center;">
-                <input type="submit" name="acao" value="Enviar">
+                <input type="submit" name="acao" value="Enviar" method="post">
             </div>
             <div class="clear"></div>
         </form>
