--- a/projeto_03_danki/index.html
+++ b/projeto_03_danki/index.html
@@ -119,8 +119,7 @@
                 <h2>Faça uma visita</h2>
                 <div class="map-wraper3">
                     <div class="map-wraper2">
-                        <div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=rua%20dos%20l%C3%ADrios%2C%20Piraporinha&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{height:100%;width:100%;}.gmap_canvas {overflow:hidden;background:none!important;}</style>
-                        </div>
+                        <div class="map" id="mapa"></div>
                     </div>
                 </div>
             </div>
@@ -136,6 +135,11 @@
             <div class="clear"></div>
         </div>
     </footer>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApB7XHSCCzf5OKhoeScA6YeX1gegDOUaw&callback=initMap" async defer></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/googleMaps.js"></script>
+    <script src="./js/menu_mobile.js"></script>
 </body>
 
 </html>
