--- a/projeto_05_danki/sobre.html
+++ b/projeto_05_danki/sobre.html
@@ -77,6 +77,9 @@
             <div class="clear"></div>
         </div>
     </footer>
+
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/menu_mobile.js"></script>
 </body>
 
 </html>
