--- a/projeto_03_danki/index.html
+++ b/projeto_03_danki/index.html
@@ -19,18 +19,18 @@
             <nav class="desktop-menu"> <!-- a tag 'nav' é utilizada para menus -->
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Serviços</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
 
             <nav class="mobile-menu"> <!-- a tag 'nav' é utilizada para menus -->
                 <ul>
                     <li><a href="">Home</a></li>
-                    <li><a href="">Serviços</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
             <div class="clear"></div>
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-    <section class="sessao1">
+    <section class="sessao1" id="servicos">
         <div class="container">
             <div class="texto-sessao1">
                 <h2>Desenvolvemos Sistemas Únicos</h2>
@@ -63,7 +63,7 @@
         </div>
     </section>
 
-    <section class="sessao2">
+    <section class="sessao2" id="sobre">
         <div class="container">
             <h2>Desenvolvido de pessoas para pessoas</h2>
             <p>Proin fermentum nisi at tellus volutpat, eu aliquam enim mattis. Aliquam erat volutpat. Etiam laoreet feugiat lobortis. Sed nibh nunc, sagittis viverra sodales non, eleifend ut lacus. Suspendisse potenti. In eget velit eu sapien euismod dictum. Nunc gravida ac nisl id lobortis. Aliquam vitae libero sollicitudin, placerat augue eu, commodo augue. Etiam et odio dictum, venenatis enim ut, auctor dui. Vivamus eget enim leo. Nam neque erat, pellentesque eget lacus vitae, mattis tincidunt lacus.</p>
@@ -80,28 +80,54 @@
         </div>
 
         <div class="part2">
-            <div class="sobre-autor">
-                <div class="titulo-autor">
-                    <div class="wraper-titulo-autor">
-                        <h2>Lucas Monteiro</h2>
-                        <p>Fullstack Developer</p>
+            <div class="scrollEquipe">
+                <div class="scroll-wraper">
+                    <div class="sobre-autor">
+                        <div class="titulo-autor">
+                            <div class="wraper-titulo-autor">
+                                <h2>Lucas Monteiro</h2>
+                                <p>Fullstack Developer</p>
+                            </div>
+                            <div class="img-autor"></div>
+                        </div>
+                        <div class="texto-autor">
+                            <p>Proin fermentum nisi at tellus volutpat, eu aliquam enim mattis. Aliquam erat volutpat. Etiam laoreet feugiat lobortis. Sed nibh nunc, sagittis viverra sodales non, eleifend ut lacus.</p>
+                        </div>
                     </div>
-                    <div class="img-autor"></div>
-                </div>
-                <div class="texto-autor">
-                    <p>Proin fermentum nisi at tellus volutpat, eu aliquam enim mattis. Aliquam erat volutpat. Etiam laoreet feugiat lobortis. Sed nibh nunc, sagittis viverra sodales non, eleifend ut lacus.</p>
+
+                    <div class="sobre-autor">
+                        <div class="titulo-autor">
+                            <div class="wraper-titulo-autor">
+                                <h2>Lucas Monteiro</h2>
+                                <p>Fullstack Developer</p>
+                            </div>
+                            <div class="img-autor"></div>
+                        </div>
+                        <div class="texto-autor">
+                            <p>Proin fermentum nisi at tellus volutpat, eu aliquam enim mattis. Aliquam erat volutpat. Etiam laoreet feugiat lobortis. Sed nibh nunc, sagittis viverra sodales non, eleifend ut lacus.</p>
+                        </div>
+                    </div>
+
+                    <div class="sobre-autor">
+                        <div class="titulo-autor">
+                            <div class="wraper-titulo-autor">
+                                <h2>Lucas Monteiro</h2>
+                                <p>Fullstack Developer</p>
+                            </div>
+                            <div class="img-autor"></div>
+                        </div>
+                        <div class="texto-autor">
+                            <p>Proin fermentum nisi at tellus volutpat, eu aliquam enim mattis. Aliquam erat volutpat. Etiam laoreet feugiat lobortis. Sed nibh nunc, sagittis viverra sodales non, eleifend ut lacus.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="slider-bullets">
-                <span style="background-color: #444;"></span>
-                <span></span>
-                <span></span>
-            </div>
+            <div class="slider-bullets"></div>
         </div>
         <div class="clear"></div>
     </section>
 
-    <section class="sessao4">
+    <section class="sessao4" id="contato">
         <div class="container">
             <div class="form">
                 <h2>Entre em contato</h2>
@@ -140,6 +166,8 @@
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/googleMaps.js"></script>
     <script src="./js/menu_mobile.js"></script>
+    <script src="./js/menuScroll.js"></script>
+    <script src="./js/sliderEquipe.js"></script>
 </body>
 
 </html>
