--- a/projeto_05_danki/veiculo-teste.html
+++ b/projeto_05_danki/veiculo-teste.html
@@ -25,7 +25,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./venda.html" style="color: #EB2D2D;">Venda</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a goTo="contato" href="#">Contato</a></li>
                 </ul>
             </nav>
 
@@ -34,7 +34,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./venda.html" style="color: #EB2D2D;">Venda</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a goTo="contato" href="#">Contato</a></li>
                 </ul>
             </nav>
             <div class="clear"></div>
@@ -54,13 +54,13 @@
                     <a href="./venda.html">VENDA</a><span>></span>
                     <a href="./veiculo-teste.html">VEÍCULO DE TESTE</a>
                 </div>
-                <div style="background-image: url('./images/carro1.jpg');" class="foto-destaque"></div>
+                <div class="foto-destaque"></div>
                 <div class="nav-galeria-parent">
                     <div class="arrow-left-nav"></div>
                     <div class="arrow-right-nav"></div>
                     <div class="nav-galeria">
                         <div class="nav-galeria-wraper">
-                            <div style="background-color: rgb(210, 210, 210);" class="mini-img-wraper">
+                            <div class="mini-img-wraper">
                                 <div style="background-image: url('./images/carro1.jpg');" class="mini-img"></div>
                             </div>
                             <div class="mini-img-wraper">
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section class="contato">
+    <section class="contato" id="contato">
         <div class="line-titulo">
             <div class="ln1"></div>
             <h2>Contato</h2>
@@ -176,6 +176,7 @@
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/menu_mobile.js"></script>
+    <script src="./js/functions.js"></script>
 </body>
 
 </html>
