--- a/projeto_05_danki/venda.html
+++ b/projeto_05_danki/venda.html
@@ -57,7 +57,7 @@
                             <div class="pointer-barra"></div>
                         </div>
                         <div class="valor-pesquisa">
-                            <p>R$0,00</p>
+                            <p class="preco_pesquisa">R$0,00</p>
                             <p>R$70.000,00</p>
                         </div>
                     </div>
@@ -182,6 +182,7 @@
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/menu_mobile.js"></script>
+    <script src="./js/functions.js"></script>
 </body>
 
 </html>
