--- a/projeto_05_danki/index.html
+++ b/projeto_05_danki/index.html
@@ -25,7 +25,7 @@
                     <li><a href="./index.html" style="color: #EB2D2D;">Home</a></li>
                     <li><a href="./venda.html">Venda</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a goTo="contato" href="#">Contato</a></li>
                 </ul>
             </nav>
 
@@ -34,7 +34,7 @@
                     <li><a href="./index.html" style="color: #EB2D2D;">Home</a></li>
                     <li><a href="./venda.html">Venda</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a goTo="contato" href="#">Contato</a></li>
                 </ul>
             </nav>
             <div class="clear"></div>
@@ -121,7 +121,7 @@
         </div>
     </section>
 
-    <section class="contato">
+    <section class="contato" id="contato">
         <div class="line-titulo">
             <div class="ln1"></div>
             <h2>Contato</h2>
@@ -158,7 +158,7 @@
                     <li><a href="./index.html" style="color: #EB2D2D;">Home</a></li>
                     <li><a href="./venda.html">Venda</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="">Contato</a></li>
                 </ul>
             </nav>
             <p>Todos os direitos reservados</p>
@@ -168,6 +168,7 @@
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/menu_mobile.js"></script>
+    <script src="./js/functions.js"></script>
 </body>
 
 </html>
