--- a/projeto_05_danki/sobre.html
+++ b/projeto_05_danki/sobre.html
@@ -25,7 +25,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./venda.html">Venda</a></li>
                     <li><a href="./sobre.html" style="color: #EB2D2D;">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a goTo="contato" href="#">Contato</a></li>
                 </ul>
             </nav>
 
@@ -34,7 +34,7 @@
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./venda.html">Venda</a></li>
                     <li><a href="./sobre.html" style="color: #EB2D2D;">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a goTo="contato" href="#">Contato</a></li>
                 </ul>
             </nav>
             <div class="clear"></div>
@@ -80,6 +80,7 @@
 
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/menu_mobile.js"></script>
+    <script src="./js/functions.js"></script>
 </body>
 
 </html>
