--- a/projeto_03_danki/index.html
+++ b/projeto_03_danki/index.html
@@ -162,7 +162,7 @@
         </div>
     </footer>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApB7XHSCCzf5OKhoeScA6YeX1gegDOUaw&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/googleMaps.js"></script>
     <script src="./js/menu_mobile.js"></script>
